// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Common] icon component Should icon component 0  1`] = `
<div>
  <i
    class="Icon IconArrowRight sample-addClass"
  >
    <div>
      test
    </div>
  </i>
</div>
`;

exports[`[Common] icon component Should icon component 1  1`] = `
<div>
  <i
    class="sample-addClass"
  />
</div>
`;
